# os_lab_5-7

./: .gitignore  CMakeLists.txt  main.cpp
doc/: report.odt
include/: binary_tree.h
src/: binary_tree.h  calc_node.cpp  control_node.cpp  my_zmq.h
